remove the other instance of javax.xml